erDiagram
    USERS ||--o{ RATINGS : gives
    MOVIES ||--o{ RATINGS : receives
    MOVIES ||--o{ MOVIE_GENRES : has
    GENRES ||--o{ MOVIE_GENRES : contains
    MOVIES ||--o{ MOVIE_KEYWORDS : has
    KEYWORDS ||--o{ MOVIE_KEYWORDS : contains

    USERS {
        INTEGER user_id PK
        TEXT created_at
    }

    MOVIES {
        INTEGER movie_id PK
        TEXT title
        TEXT original_title
        TEXT overview
        TEXT release_date
        INTEGER release_year
        REAL runtime
        INTEGER adult
        REAL budget
        REAL revenue
        REAL popularity
        REAL vote_average
        INTEGER vote_count
        TEXT original_language
    }

    RATINGS {
        INTEGER rating_id PK
        INTEGER user_id FK
        INTEGER movie_id FK
        REAL rating
        TEXT timestamp
    }

    GENRES {
        INTEGER genre_id PK
        TEXT name
    }

    MOVIE_GENRES {
        INTEGER movie_id PK, FK
        INTEGER genre_id PK, FK
    }

    KEYWORDS {
        INTEGER keyword_id PK
        TEXT name
    }

    MOVIE_KEYWORDS {
        INTEGER movie_id PK, FK
        INTEGER keyword_id PK, FK
    }